更新 Standard.config

--- a/configs/luci/Standard.config
+++ b/configs/luci/Standard.config
@@ -1,240 +1,33 @@
-########################################
-# 根文件系统和内核设置
-########################################
-CONFIG_TARGET_ROOTFS_EXT4FS=y             # 使用 ext4 文件系统作为根分区
-CONFIG_TARGET_KERNEL_PARTSIZE=64         # 内核分区大小为 64MB
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024       # 根文件系统分区大小 1024MB
-
-CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y        # 内核 CFQ I/O 调度组
-CONFIG_KERNEL_HUGETLBFS=y                # 支持 HugeTLB 文件系统
-CONFIG_KERNEL_HUGETLB_PAGE=y             # 支持 HugeTLB 页面
-CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y       # 启用内存控制组 swap 支持
-CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y     # 启用透明大页
-CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y # 总是使用透明大页
-
-CONFIG_KERNEL_CGROUP_DEVICE=y            # 启用设备控制组
-CONFIG_KERNEL_CGROUP_FREEZER=y           # 启用冻结控制组
-CONFIG_KERNEL_CGROUP_HUGETLB=y           # 启用 HugeTLB 控制组
-CONFIG_KERNEL_CGROUP_NET_PRIO=y          # 启用网络优先级控制组
-CONFIG_KERNEL_CGROUP_PERF=y              # 启用性能计数控制组
-CONFIG_KERNEL_NET_CLS_CGROUP=y           # 启用网络分类控制组
-CONFIG_KERNEL_PERF_EVENTS=y              # 启用内核性能事件
-
-CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y   # 挂载内核 cgroup 文件系统
-
-########################################
-# Docker / 容器相关
-########################################
-CONFIG_DOCKER_CGROUP_OPTIONS=y           # Docker cgroup 支持
-CONFIG_DOCKER_NET_MACVLAN=y              # Docker 支持 macvlan 网络
-CONFIG_DOCKER_OPTIONAL_FEATURES=y        # Docker 可选特性
-CONFIG_DOCKER_STO_EXT4=y                 # Docker 存储驱动为 ext4
-
-CONFIG_PACKAGE_containerd=y              # 容器守护进程 containerd
-CONFIG_PACKAGE_docker=y                   # Docker
-CONFIG_PACKAGE_dockerd=y                  # Docker 守护进程
-CONFIG_PACKAGE_luci-lib-docker=y          # LuCI Docker 库
-
-########################################
-# 文件系统工具
-########################################
-CONFIG_PACKAGE_fdisk=y                    # 磁盘分区工具 fdisk
-CONFIG_PACKAGE_parted=y                   # 高级分区工具 parted
-CONFIG_PACKAGE_libparted=y                # parted 库
-CONFIG_PACKAGE_f2fs-tools=y               # F2FS 文件系统工具
-CONFIG_PACKAGE_f2fsck=y                   # F2FS 文件系统检查
-CONFIG_PACKAGE_btrfs-progs=y              # Btrfs 文件系统工具
-CONFIG_PACKAGE_kmod-fs-btrfs=y            # Btrfs 内核模块
-CONFIG_PACKAGE_fuse-utils=y               # FUSE 用户空间工具
-CONFIG_PACKAGE_kmod-fuse=y                # FUSE 内核模块
-CONFIG_PACKAGE_libfuse=y                  # FUSE 库
-
-CONFIG_PACKAGE_tar=y                      # tar 压缩工具
-CONFIG_PACKAGE_TAR_BZIP2=y                # tar bzip2 支持
-CONFIG_PACKAGE_TAR_GZIP=y                 # tar gzip 支持
-CONFIG_PACKAGE_TAR_POSIX_ACL=y            # tar POSIX ACL 支持
-CONFIG_PACKAGE_TAR_XATTR=y                # tar 扩展属性支持
-CONFIG_PACKAGE_TAR_XZ=y                   # tar xz 支持
-CONFIG_PACKAGE_TAR_ZSTD=y                 # tar zstd 支持
-CONFIG_PACKAGE_xz=y                       # xz 工具
-CONFIG_PACKAGE_xz-utils=y                 # xz 库
-
-########################################
-# 核心库和工具
-########################################
-CONFIG_PACKAGE_bash=y                     # bash shell
-CONFIG_PACKAGE_blkid=y                    # blkid 工具
-CONFIG_PACKAGE_boost=y                    # boost 库
-CONFIG_PACKAGE_boost-program_options=y   # boost program_options
-CONFIG_PACKAGE_boost-system=y            # boost system
-CONFIG_PACKAGE_libacl=y                   # ACL 库
-CONFIG_PACKAGE_libatomic=y                # 原子操作库
-CONFIG_PACKAGE_libattr=y                  # 文件属性库
-CONFIG_PACKAGE_libbz2=y                   # bzip2 库
-CONFIG_PACKAGE_libcap=y                   # 权限能力库
-CONFIG_PACKAGE_libltdl=y                  # 动态加载库
-CONFIG_PACKAGE_liblua5.3=y                # Lua 5.3
-CONFIG_PACKAGE_liblzma=y                  # lzma 压缩库
-CONFIG_PACKAGE_liblzo=y                   # LZO 压缩库
-CONFIG_PACKAGE_libseccomp=y               # seccomp 库
-CONFIG_PACKAGE_libuv=y                    # libuv
-CONFIG_PACKAGE_libwebsockets-full=y       # Websocket 库
-CONFIG_PACKAGE_libzstd=y                  # zstd 压缩库
-CONFIG_PACKAGE_losetup=y                  # loop 设备工具
-CONFIG_PACKAGE_lsblk=y                    # lsblk 工具
-
-########################################
-# LuCI Web 界面及主题
-########################################
-CONFIG_PACKAGE_luci-app-advancedplus=y
-CONFIG_PACKAGE_luci-app-advancedsetting=y
-CONFIG_PACKAGE_luci-app-alist=y
-CONFIG_PACKAGE_luci-app-ddns-go=y
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-kucat-config=y
-CONFIG_PACKAGE_luci-app-netwizard=y
-CONFIG_PACKAGE_luci-app-partexp=y
 CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Geoview=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_luci-app-store=y
-CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-quickstart=y
+#CONFIG_PACKAGE_luci-app-netwizard=y
 CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-partexp=y
+CONFIG_PACKAGE_luci-app-store=y
+CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
+CONFIG_PACKAGE_luci-theme-kucat=y
 
-CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+#CONFIG_FEED_passwall_packages=y
+#CONFIG_FEED_passwall_luci=y
+
+# 启用的中文语言包
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 
-CONFIG_PACKAGE_luci-lib-taskd=y
-CONFIG_PACKAGE_luci-lib-xterm=y
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-theme-kucat=y
-CONFIG_PACKAGE_luci-theme-material3=y
 
-########################################
-# Shadow 用户与权限管理
-########################################
-CONFIG_PACKAGE_shadow=y
-CONFIG_PACKAGE_shadow-all=y
-CONFIG_PACKAGE_shadow-chage=y
-CONFIG_PACKAGE_shadow-chfn=y
-CONFIG_PACKAGE_shadow-chgpasswd=y
-CONFIG_PACKAGE_shadow-chpasswd=y
-CONFIG_PACKAGE_shadow-chsh=y
-CONFIG_PACKAGE_shadow-common=y
-CONFIG_PACKAGE_shadow-expiry=y
-CONFIG_PACKAGE_shadow-faillog=y
-CONFIG_PACKAGE_shadow-gpasswd=y
-CONFIG_PACKAGE_shadow-groupadd=y
-CONFIG_PACKAGE_shadow-groupdel=y
-CONFIG_PACKAGE_shadow-groupmems=y
-CONFIG_PACKAGE_shadow-groupmod=y
-CONFIG_PACKAGE_shadow-groups=y
-CONFIG_PACKAGE_shadow-grpck=y
-CONFIG_PACKAGE_shadow-grpconv=y
-CONFIG_PACKAGE_shadow-grpunconv=y
-CONFIG_PACKAGE_shadow-lastlog=y
-CONFIG_PACKAGE_shadow-login=y
-CONFIG_PACKAGE_shadow-logoutd=y
-CONFIG_PACKAGE_shadow-newgidmap=y
-CONFIG_PACKAGE_shadow-newgrp=y
-CONFIG_PACKAGE_shadow-newuidmap=y
-CONFIG_PACKAGE_shadow-newusers=y
-CONFIG_PACKAGE_shadow-nologin=y
-CONFIG_PACKAGE_shadow-passwd=y
-CONFIG_PACKAGE_shadow-pwck=y
-CONFIG_PACKAGE_shadow-pwconv=y
-CONFIG_PACKAGE_shadow-pwunconv=y
-CONFIG_PACKAGE_shadow-su=y
-CONFIG_PACKAGE_shadow-useradd=y
-CONFIG_PACKAGE_shadow-userdel=y
-CONFIG_PACKAGE_shadow-usermod=y
-CONFIG_PACKAGE_shadow-utils=y
-CONFIG_PACKAGE_shadow-vipw=y
 
-########################################
-# 网络 / 代理 / VPN
-########################################
-CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_ipt2socks=y
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_tailscale=y
-CONFIG_PACKAGE_lua-neturl=y
-CONFIG_PACKAGE_mosdns=y
-CONFIG_PACKAGE_nping=y
-CONFIG_PACKAGE_libpcap=y
-CONFIG_PACKAGE_dns2tcp=y
-
-########################################
-# Sing-Box / Trojan / V2ray / Shadowsocks
-########################################
-CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
-CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_trojan-plus=y
-
-CONFIG_SING_BOX_BUILD_ACME=y
-CONFIG_SING_BOX_BUILD_CLASH_API=y
-CONFIG_SING_BOX_BUILD_GVISOR=y
-CONFIG_SING_BOX_BUILD_QUIC=y
-CONFIG_SING_BOX_BUILD_TAILSCALE=y
-CONFIG_SING_BOX_BUILD_UTLS=y
-CONFIG_SING_BOX_BUILD_WIREGUARD=y
-
-########################################
-# 系统工具 / 其他工具
-########################################
-CONFIG_PACKAGE_quickstart=y
-CONFIG_PACKAGE_resize2fs=y
-CONFIG_PACKAGE_runc=y
-CONFIG_PACKAGE_script-utils=y
-CONFIG_PACKAGE_smartd=y
-CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_taskd=y
-CONFIG_PACKAGE_tini=y
-CONFIG_PACKAGE_unzip=y
-
-########################################
-# 编译优化 / 库设置
-########################################
-CONFIG_ZSTD_OPTIMIZE_O3=y
-CONFIG_boost-compile-visibility-hidden=y
-CONFIG_boost-runtime-shared=y
-CONFIG_boost-static-and-shared-libs=y
-CONFIG_boost-variant-release=y
-
-########################################
-# 语言支持
-########################################
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh-cn=y
-CONFIG_LUCI_LANG_zh-tw=y
+#软件空间大小
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
