--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -22,7 +22,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   EXTERNAL_FILE: configs/luci/Lite.config
   CONFIG_FILE: configs/x86_64.config
-  SYS_CONF_SH: configure.sh
+  SYS_CONF_SH: configurenew.sh
   PACKS: package.sh
   EXTEND_DRIVER: true
   UPLOAD_BIN_DIR: false
