--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -10,9 +10,11 @@ on:
       pppoe_user:
         description: 'PPPoE 用户名'
         required: true
+        default: '123456'
       pppoe_pass:
         description: 'PPPoE 密码'
         required: true
+        default: '123456'
   repository_dispatch:
 
 env:
@@ -20,7 +22,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  EXTERNAL_FILE: configs/luci/Lite.config
+  EXTERNAL_FILE: configs/luci/lede.config
   CONFIG_FILE: configs/x86_64.config
   SYS_CONF_SH: configurenew.sh
   PACKS: package.sh
@@ -89,8 +91,8 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-      # 6. 自定义 feeds 和脚本
-      - name: 加载自定义 feeds 和脚本
+      # 6. 自定义 feeds 和脚本 
+      - name: 加载自定义 feeds 和脚本 configurenew.sh
         run: |
           cd $WORKDIR/openwrt
           [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
@@ -112,7 +114,7 @@ jobs:
           mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
           printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'sed -i "s/192.168.100.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'sed -i "s/192\.168\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
@@ -134,6 +136,8 @@ jobs:
           make defconfig
           sed -i '/CONFIG_DEFAULT_luci/d' .config
           cat .config
+      
+  
 
       # 10.5 输出并保存最终 .config
       - name: 输出并保存最终 .config
