--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -205,13 +205,23 @@ jobs:
           rm -rf build_dir staging_dir tmp bin/packages .ccache
           df -hT
 
-      # 14. 上传 bin 目录（可选）
-      - name: 上传 bin 目录
+
+      # 14. 上传 bin 目录下的 packages 目录（可选）
+      - name: 上传 bin 目录下的 packages 目录
         uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+        run: |
+          # 进入 bin 目录并压缩整个 packages 目录
+          cd $WORKDIR/openwrt/bin
+    
+          # 压缩整个 packages 目录
+          tar -czvf OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz packages
+    
+          # 将压缩包复制到工作区，准备上传
+          cp OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz $GITHUB_WORKSPACE/
         with:
-          name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-          path: $WORKDIR/openwrt/bin
+          name: OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
+          path: $GITHUB_WORKSPACE/OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz
 
       # 15. 整理固件目录
       - name: 整理固件目录
