--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,19 +14,26 @@ on:
         description: 'PPPoE 密码'
         required: true
         default: '123456'
+      ssh:
+        description: 'Enable SSH connection to Actions'
+        required: false
+        default: 'false'
+        type: boolean
   repository_dispatch:
 
 env:
-  OPNAME: 'x86_64ImmortalWrttest'
+  OPNAME: 'x86_64im'
+  # 改为 ImmortalWrt 源（im 的）
   REPO_URL: https://github.com/immortalwrt/immortalwrt
+  # 使用 openwrt-24.10 分支（对应 OpenWrt 24.10，内核 6.6）
   REPO_BRANCH: openwrt-24.10
   FEEDS_CONF: feeds.conf.default
-  EXTERNAL_FILE: configs/luci/im.config
+  EXTERNAL_FILE: configs/luci/test.config
   CONFIG_FILE: configs/x86_64.config
   SYS_CONF_SH: configurenew.sh
   PACKS: package.sh
   EXTEND_DRIVER: false
-  UPLOAD_BIN_DIR: true  # 设置为 true 以启用上传
+  UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   WORKDIR: /mnt/openwrt_workdir
@@ -57,17 +64,19 @@ jobs:
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune -a -f
           df -hT
-          # Install Go if not installed
+              # Install Go if not installed
           if ! command -v go &>/dev/null; then
-            echo "Go not found, installing..."
+          echo "Go not found, installing..."
             sudo apt-get -qq install golang-go
           else
             echo "Go is already installed"
           fi
+          # Check Go version
           go version
-
       - name: 检查磁盘空间
         run: df -hT
+
+
 
       # 3. 克隆 OpenWrt 源码
       - name: 克隆 OpenWrt 源码
@@ -75,7 +84,6 @@ jobs:
         run: |
           git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
           ln -sf $WORKDIR/openwrt $GITHUB_WORKSPACE/openwrt
-
       # 4. 使用 cache 加速编译
       - name: 缓存编译
         uses: stupidloud/cachewrtbuild@main
@@ -87,13 +95,13 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
+
       # 5. 更新 feeds
       - name: 更新并安装 feeds
         run: |
           cd $WORKDIR/openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-
       - name: 检查磁盘空间
         run: df -hT
 
@@ -104,7 +112,6 @@ jobs:
           [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
           chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
           bash $GITHUB_WORKSPACE/$SYS_CONF_SH
-
       # 7. 加载自定义配置和 package.sh
       - name: 加载自定义配置和 package.sh
         run: |
@@ -113,7 +120,6 @@ jobs:
           [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config
           chmod +x $GITHUB_WORKSPACE/$PACKS
           bash $GITHUB_WORKSPACE/$PACKS
-
       # 8. 自动注入 LAN IP + PPPoE 信息
       - name: 自动注入 LAN IP 和 PPPoE
         run: |
@@ -126,23 +132,22 @@ jobs:
           printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'uci commit network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
           printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-
       # 9. 扩展驱动（Lite 不启用）
       - name: 扩展驱动
         if: env.EXTEND_DRIVER == 'true'
         run: |
           cd $WORKDIR/openwrt
           cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
-
       # 10. 最终修改配置
       - name: 修改最终配置
         run: |
           cd $WORKDIR/openwrt
           cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config
           make defconfig
-          sed -i '/CONFIG_DEFAULT_luci/d' .config
+          # sed -i '/CONFIG_DEFAULT_luci/d' .config
           cat .config
       
+          
       # 10.5 输出并保存最终 .config
       - name: 输出并保存最终 .config
         run: |
@@ -150,18 +155,24 @@ jobs:
           echo "======== 当前 OpenWrt 配置 ========"
           cat .config
           echo "==================================="
+          # 保存备份文件到 workdir，带时间戳
           cp .config $WORKDIR/openwrt/.config_backup_$(date +'%Y%m%d%H%M%S')
           echo "已保存 .config 备份文件"
-
       # 11. 下载 dl 包
       - name: 下载依赖包
         run: |
           cd $WORKDIR/openwrt
           make download -j$(nproc)
           find dl -size -1024c -exec rm -f {} \;
-
       - name: 检查磁盘空间
         run: df -hT
+
+      # 4. 启动 SSH 连接 (tmate) 如果用户选择启用
+      - name: 启动 SSH 连接
+        if: ${{ inputs.ssh == true }}
+        uses: mxschmitt/action-tmate@v3.13
+        continue-on-error: true
+
 
       # 12. 编译固件
       - name: 编译 OpenWrt 固件
@@ -173,7 +184,6 @@ jobs:
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
-
       # 13. 清理编译缓存
       - name: 清理编译缓存
         if: steps.compile.outputs.status == 'success'
@@ -181,18 +191,13 @@ jobs:
           cd $WORKDIR/openwrt
           rm -rf build_dir staging_dir tmp bin/packages .ccache
           df -hT
-
-      # 14. 上传 packages 文件夹
-      - name: 上传 packages 文件夹
+      # 14. 上传 bin 目录（可选）
+      - name: 上传 bin 目录
+        uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
-        run: |
-          cd $WORKDIR/openwrt/bin
-          tar -czvf OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz packages
-          cp OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz $GITHUB_WORKSPACE/
-        uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
-          path: $GITHUB_WORKSPACE/OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz
+          name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+          path: $WORKDIR/openwrt/bin
 
       # 15. 整理固件目录
       - name: 整理固件目录
@@ -203,11 +208,10 @@ jobs:
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "status=success" >> $GITHUB_OUTPUT
-
       # 16. 上传固件到 Artifact
       - name: 上传固件到 Artifact
-        if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@main
+        if: steps.organize.outputs.status == 'success'
         with:
           name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
           path: ${{ env.FIRMWARE }}
@@ -220,12 +224,10 @@ jobs:
           echo "release_tag=$(date +"%Y.%m.%d-%H%M%S")" >> $GITHUB_OUTPUT
           touch release.txt
           echo "status=success" >> $GITHUB_OUTPUT
-
       # 18. Release 内容生成
       - name: 生成 Release 内容
         run: |
           echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
-
       # 19. 上传固件到 Release
       - name: 上传固件到 Release
         uses: softprops/action-gh-release@v1
