--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -142,7 +142,13 @@ jobs:
           cp .config $WORKDIR/openwrt/.config_backup_$(date +'%Y%m%d%H%M%S')
           echo "已保存 .config 备份文件"
 
-      # 11. 下载 dl 包
+      # 11. 启动 SSH 连接 (tmate) 如果用户选择启用
+      - name: 启动 SSH 连接
+        if: ${{ inputs.ssh == true }}
+        uses: mxschmitt/action-tmate@v3.13
+        continue-on-error: true
+
+      # 12. 下载 dl 包
       - name: 下载依赖包
         run: |
           cd $WORKDIR/openwrt
@@ -151,11 +157,6 @@ jobs:
       - name: 检查磁盘空间
         run: df -hT
 
-      # 12. 启动 SSH 连接 (tmate) 如果用户选择启用
-      - name: 启动 SSH 连接
-        if: ${{ inputs.ssh == true }}
-        uses: mxschmitt/action-tmate@v3.13
-        continue-on-error: true
 
       # 13. 编译 packages
       - name: 编译 OpenWrt Packages
@@ -164,7 +165,7 @@ jobs:
           cd $WORKDIR/openwrt
           echo "$(nproc) thread compile packages"
           # 仅编译 packages，不编译镜像
-          make package/compile -j$(nproc) V=s || make package/compile -j4 V=s
+          make package/compile -j$(nproc)  || make package/compile -j4 V=s
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
