--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
-name: x86_64 OpenWrt test
+name: OpenWrt 编译 - Kenzo仓库 Quickstart
+
 on:
   workflow_dispatch:
     inputs:
@@ -15,7 +16,7 @@ on:
         required: true
         default: '123456'
       ssh:
-        description: 'Enable SSH connection to Actions'
+        description: '是否启用 SSH 连接到 Actions'
         required: false
         default: 'false'
         type: boolean
@@ -23,9 +24,7 @@ on:
 
 env:
   OPNAME: 'x86_64im'
-  # 改为 ImmortalWrt 源（im 的）
   REPO_URL: https://github.com/immortalwrt/immortalwrt
-  # 使用 openwrt-24.10 分支（对应 OpenWrt 24.10，内核 6.6）
   REPO_BRANCH: openwrt-24.10
   FEEDS_CONF: feeds.conf.default
   EXTERNAL_FILE: configs/luci/test.config
@@ -38,6 +37,7 @@ env:
   UPLOAD_RELEASE: true
   WORKDIR: /mnt/openwrt_workdir
   TZ: Asia/Shanghai
+  FIRMWARE: $WORKDIR/openwrt/bin/targets/x86/64
 
 jobs:
   build:
@@ -63,170 +63,99 @@ jobs:
           sudo chown $USER:$GROUPS $WORKDIR
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune -a -f
-          df -hT
-              # Install Go if not installed
-          if ! command -v go &>/dev/null; then
-          echo "Go not found, installing..."
-            sudo apt-get -qq install golang-go
-          else
-            echo "Go is already installed"
-          fi
-          # Check Go version
-          go version
-      - name: 检查磁盘空间
-        run: df -hT
 
-
-
-      # 3. 克隆 OpenWrt 源码
-      - name: 克隆 OpenWrt 源码
-        working-directory: ${{ env.WORKDIR }}
+      # 3. 克隆 ImmortalWrt 仓库
+      - name: 克隆 ImmortalWrt 仓库
         run: |
-          git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
-          ln -sf $WORKDIR/openwrt $GITHUB_WORKSPACE/openwrt
-      # 4. 使用 cache 加速编译
-      - name: 缓存编译
-        uses: stupidloud/cachewrtbuild@main
-        with:
-          ccache: 'true'
-          mixkey: 'x86'
-          prefix: 'openwrt'
+          echo "克隆 ImmortalWrt 仓库..."
+          git clone --depth 1 -b "$REPO_BRANCH" "$REPO_URL" $WORKDIR/openwrt || echo "仓库克隆失败，请检查网络连接"
 
-      - name: 检查磁盘空间
-        run: df -hT
-
-
-      # 5. 更新 feeds
-      - name: 更新并安装 feeds
+      # 4. 配置官方 feeds
+      - name: 配置官方 feeds
         run: |
+          echo "配置官方 feeds..."
+          cat > $WORKDIR/openwrt/feeds.conf.default << 'EOF'
+          src-git packages https://github.com/openwrt/packages.git;openwrt-24.10
+          src-git luci https://github.com/openwrt/luci.git;openwrt-24.10
+          src-git routing https://github.com/openwrt/routing.git;openwrt-24.10
+          src-git telephony https://github.com/openwrt/telephony.git;openwrt-24.10
+          EOF
           cd $WORKDIR/openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-      - name: 检查磁盘空间
-        run: df -hT
 
-      # 6. 自定义 feeds 和脚本
-      - name: 加载自定义 feeds 和脚本
+      # 5. 下载自定义包到统一目录
+      - name: 下载自定义包
         run: |
+          echo "下载自定义包到统一目录..."
+          CUSTOM_DIR="package/custom"
+          mkdir -p "$CUSTOM_DIR"
+          clone_to_custom() {
+            local url="$1"
+            local name="$2"
+            local target_dir="$CUSTOM_DIR/$name"
+            if [ ! -d "$target_dir" ]; then
+              echo "下载: $name"
+              if git clone --depth 1 "$url" "$target_dir" 2>/dev/null; then
+                echo "  ✓ 下载成功"
+                return 0
+              else
+                echo "  ✗ 下载失败"
+                return 1
+              fi
+            else
+              echo "已存在: $name"
+              return 0
+            fi
+          }
+
+          clone_to_custom "https://github.com/linkease/istore.git" "istore"
+          clone_to_custom "https://github.com/sirpdboy/luci-app-advancedplus.git" "luci-app-advancedplus"
+          clone_to_custom "https://github.com/sirpdboy/luci-theme-kucat.git" "luci-theme-kucat"
+          clone_to_custom "https://github.com/sirpdboy/luci-app-kucat-config.git" "luci-app-kucat-config"
+          clone_to_custom "https://github.com/kenzok8/openwrt-packages.git" "kenzo"
+          clone_to_custom "https://github.com/kenzok8/small.git" "small"
+
           cd $WORKDIR/openwrt
-          [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
-          chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
-          bash $GITHUB_WORKSPACE/$SYS_CONF_SH
-      # 7. 加载自定义配置和 package.sh
-      - name: 加载自定义配置和 package.sh
+          ./scripts/feeds update -a
+          rm -rf feeds/luci/applications/luci-app-mosdns
+          rm -rf feeds/packages/net/{alist,adguardhome,mosdns,xray*,v2ray*,v2ray*,sing*,smartdns}
+          rm -rf feeds/packages/utils/v2dat
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
+          ./scripts/feeds install -a
+
+      # 6. 生成配置
+      - name: 生成配置
         run: |
+          echo "生成配置..."
           cd $WORKDIR/openwrt
-          [ -e $GITHUB_WORKSPACE/files ] && mv $GITHUB_WORKSPACE/files files
-          [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config
-          chmod +x $GITHUB_WORKSPACE/$PACKS
-          bash $GITHUB_WORKSPACE/$PACKS
-      # 8. 自动注入 LAN IP + PPPoE 信息
-      - name: 自动注入 LAN IP 和 PPPoE
-        run: |
-          mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
-          printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'sed -i "s/192\.168\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci commit network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-          printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
-      # 9. 扩展驱动（Lite 不启用）
-      - name: 扩展驱动
-        if: env.EXTEND_DRIVER == 'true'
-        run: |
-          cd $WORKDIR/openwrt
-          cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
-      # 10. 最终修改配置
-      - name: 修改最终配置
-        run: |
-          cd $WORKDIR/openwrt
-          cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config
           make defconfig
-          # sed -i '/CONFIG_DEFAULT_luci/d' .config
-          cat .config
-      
-          
-      # 10.5 输出并保存最终 .config
-      - name: 输出并保存最终 .config
+
+      # 7. 添加自定义配置，使用外部的 test.config 文件
+      - name: 添加自定义配置
         run: |
-          cd $WORKDIR/openwrt
-          echo "======== 当前 OpenWrt 配置 ========"
-          cat .config
-          echo "==================================="
-          # 保存备份文件到 workdir，带时间戳
-          cp .config $WORKDIR/openwrt/.config_backup_$(date +'%Y%m%d%H%M%S')
-          echo "已保存 .config 备份文件"
-      # 11. 下载 dl 包
-      - name: 下载依赖包
+          echo "从外部配置文件添加自定义配置..."
+          if [ -f "$WORKDIR/$EXTERNAL_FILE" ]; then
+            cat $WORKDIR/$EXTERNAL_FILE >> $WORKDIR/openwrt/.config
+          else
+            echo "$EXTERNAL_FILE not found."
+          fi
+
+      # 8. 处理配置
+      - name: 处理配置
         run: |
-          cd $WORKDIR/openwrt
+          echo "处理配置..."
+          yes "" | make oldconfig
+
+      # 9. 开始编译
+      - name: 开始编译
+        run: |
+          echo "开始编译 OpenWrt..."
           make download -j$(nproc)
-          find dl -size -1024c -exec rm -f {} \;
-      - name: 检查磁盘空间
-        run: df -hT
-
-      # 4. 启动 SSH 连接 (tmate) 如果用户选择启用
-      - name: 启动 SSH 连接
-        if: ${{ inputs.ssh == true }}
-        uses: mxschmitt/action-tmate@v3.13
-        continue-on-error: true
-
-
-      # 12. 编译固件
-      - name: 编译 OpenWrt 固件
-        id: compile
-        run: |
-          cd $WORKDIR/openwrt
-          echo "$(nproc) thread compile"
           make -j$(nproc) V=s || make -j4 V=s
-          echo "status=success" >> $GITHUB_OUTPUT
-          echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
-          echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
-      # 13. 清理编译缓存
-      - name: 清理编译缓存
-        if: steps.compile.outputs.status == 'success'
-        run: |
-          cd $WORKDIR/openwrt
-          rm -rf build_dir staging_dir tmp bin/packages .ccache
-          df -hT
-      # 14. 上传 bin 目录（可选）
-        # 14.1 压缩 packages 文件夹
-      - name: 压缩 packages 文件夹
-        if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
-        run: |
-          cd $WORKDIR/openwrt/bin
-          # 压缩 packages 文件夹
-          tar -czvf OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz packages
-          # 将压缩包复制到工作区
-          cp OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz $GITHUB_WORKSPACE/
 
-      # 14.2 上传 packages 压缩包
-      - name: 上传 packages 压缩包
-        if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
-        uses: actions/upload-artifact@main
-        with:
-          name: OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}
-          path: $GITHUB_WORKSPACE/OpenWrt_packages_${{ env.DEVICE_NAME }}_${{ env.FILE_DATE }}.tar.gz
-      # 15. 整理固件目录
-      - name: 整理固件目录
-        id: organize
-        if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
-        run: |
-          cd $WORKDIR/openwrt/bin/targets/*/*
-          rm -rf packages
-          echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-          echo "status=success" >> $GITHUB_OUTPUT
-      # 16. 上传固件到 Artifact
-      - name: 上传固件到 Artifact
-        uses: actions/upload-artifact@main
-        if: steps.organize.outputs.status == 'success'
-        with:
-          name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-          path: ${{ env.FIRMWARE }}
-
-      # 17. 生成 Release tag
+      # 10. 生成 Release 标签
       - name: 生成 Release tag
         id: tag
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
@@ -234,14 +163,16 @@ jobs:
           echo "release_tag=$(date +"%Y.%m.%d-%H%M%S")" >> $GITHUB_OUTPUT
           touch release.txt
           echo "status=success" >> $GITHUB_OUTPUT
-      # 18. Release 内容生成
+
+      # 11. 生成 Release 内容
       - name: 生成 Release 内容
         run: |
           echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
-      # 19. 上传固件到 Release
+
+      # 12. 上传固件到 Release
       - name: 上传固件到 Release
         uses: softprops/action-gh-release@v1
-        if: steps.tag.outputs.status == 'success'
+        if: steps.tag.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -249,3 +180,5 @@ jobs:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
           files: ${{ env.FIRMWARE }}/*
+
+     
