--- a/configs/luci/im.config
+++ b/configs/luci/im.config
@@ -235,3 +235,13 @@ CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
 CONFIG_shadow-all=y
+CONFIG_ALL_NONSHARED=y
+CONFIG_ALL_KMODS=y
+CONFIG_PACKAGE_kmod-cfg80211=y
+CONFIG_PACKAGE_kmod-mac80211=y
+CONFIG_PACKAGE_kmod-mt76=y
+CONFIG_PACKAGE_kmod-mt7921u=y
+CONFIG_PACKAGE_kmod-mt7922-firmware=y
+CONFIG_PACKAGE_wpad=y
+CONFIG_PACKAGE_iw=y
+
